styles/gallery.css
.img-row {
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  margin: 0;
}

.img-col {
  width: 30%;
  transition: all 0.25s ease-in;
  -webkit-transition: all 0.25s ease-in;
  -moz-transition: all 0.25s ease-in;
  -ms-transition: all 0.25s ease-in;
  -o-transition: all 0.25s ease-in;
  cursor: pointer;
}
.mobile {
  width: 20% !important;
}

.img-wrapper {
  position: relative;
  margin: 0;
  padding: 10px;
}
.img-wrapper img {
  width: 100%;
}
.img-wrapper a {
  border: 0;
}

.img-overlay {
  background: rgba(0, 0, 0, 0.2);
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
}
.img-overlay i {
  color: #fff;
  font-size: 3em;
}

#overlay {
  background: white;
  width: 100%;
  height: 100%;
  min-height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  align-items: center;
  -webkit-box-align: center;
  -webkit-box-align: center;
  -moz-box-align: center;
  -ms-box-align: center;
  justify-content: center;
  -webkit-justify-content: center;
  -moz-justify-content: center;
  -ms-justify-content: center;
  -o-justify-content: center;
  z-index: 999;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

#overlay #main {
  width: 80%;
  height: 100%;
  min-height: 100%;
  overflow-y: scroll;
}

#overlay img {
  margin: 0;
  height: 80%;
  margin: 1em 2em;
}

#overlay #main img {
  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
  margin: 2% 0;
  padding: 0;
}

#blurb {
  padding: 5% 5% 0 5%;
}

.web-screenshot {
  width: 80%;
  margin: 0 10% !important;
}

.mobile-screenshot {
  height: auto;
  margin: 2% 30% !important;
}

#nextButton,
#prevButton,
#exitButton {
  cursor: pointer;
}

#nextButton,
#prevButton {
  height: 100%;
  width: 3em;
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  align-items: center;
  -webkit-box-align: center;
  -webkit-box-align: center;
  -moz-box-align: center;
  -ms-box-align: center;
  justify-content: center;
  -webkit-justify-content: center;
  -moz-justify-content: center;
  -ms-justify-content: center;
  -o-justify-content: center;
  color: black;
  font-size: 1.5em;
  position: absolute;
  transition: all 1s ease-out;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -ms-transition: all 1s ease;
  -o-transition: all 1s ease;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
}

#nextButton:hover,
#prevButton:hover {
  background-color: rgba(0, 0, 0, 0.2);
}

#nextButton {
  right: 0;
}
@media screen and (min-width: 768px) {
  #nextButton {
    font-size: 3em;
  }
}

#prevButton {
  left: 0;
}
@media screen and (min-width: 768px) {
  #prevButton {
    font-size: 3em;
  }
}

#exitButton {
  color: black;
  font-size: 3em;
  transition: opacity 0.8s;
  -webkit-transition: opacity 0.8s;
  -moz-transition: opacity 0.8s;
  -ms-transition: opacity 0.8s;
  -o-transition: opacity 0.8s;
  position: absolute;
  top: 15px;
  right: 4em;
}
#exitButton:hover {
  opacity: 0.7;
}

@media only screen and (max-width: 1500px) {
  #overlay #main {
    width: 75%;
    height: 100%;
    min-height: 100%;
    overflow-y: scroll;
  }

  .web-wrapper {
    width: 80%;
    margin: 2% 0 2% 5% !important;
  }

  .mobile-wrapper {
    margin: 2% auto !important;
    width: 50%;
  }

  .web-screenshot,
  .mobile-screenshot {
    display: block;
    object-fit: cover;
    width: 100%;
    margin: 0 !important;
  }
  #exitButton {
    right: 15%;
  }
}

@media only screen and (max-width: 1000px) {
  .img-col {
    width: 100%;
  }
  .mobile {
    width: 40% !important;
  }

  #overlay #main {
    width: 100%;
  }
  #nextButton,
  #prevButton {
    display: none;
  }

  #exitButton {
    right: 5%;
  }
}

@media only screen and (max-width: 500px) {
  .mobile {
    width: 100% !important;
  }
}

